--- a/style.css
+++ b/style.css
@@ -170,25 +170,17 @@ a {
     visibility: visible;
     opacity: 0.95;
 }
-#products-checkbox-sidebar:checked + label > .sidebar-additional {
-    height: auto;
-    visibility: visible;
-    opacity: 1;
-}
-#products-checkbox-sidebar:checked + label .arrow-down {
-    display: none;
-}
-#products-checkbox-sidebar:checked + label .arrow-up {
-    display: inline-block;
-}
+#products-checkbox-sidebar:checked + label > .sidebar-additional,
 #vision-checkbox-sidebar:checked + label > .sidebar-additional {
     height: auto;
     visibility: visible;
-    opacity: 1;
+    opacity: 0.95;
 }
+#products-checkbox-sidebar:checked + label .arrow-down,
 #vision-checkbox-sidebar:checked + label .arrow-down {
     display: none;
 }
+#products-checkbox-sidebar:checked + label .arrow-up,
 #vision-checkbox-sidebar:checked + label .arrow-up {
     display: inline-block;
 }
